syntax = "proto3";

package tron.foundational_store.v1;

// key = <pair bytes>
message PairCreated {
  bytes token0 = 2;
  bytes token1 = 3;
}